# ai-defense-python-sdk

./: README.md  pyproject.toml
aidefense/: __init__.py  async_request_handler.py  config.py  request_handler.py
aidefense/mcpscan/: __init__.py  models.py  resource_connections.py  routes.py
aidefense/runtime/: __init__.py  auth.py  chat_inspect.py  http_inspect.py  inspection_client.py
aidefense/runtime/agentsec/: __init__.py  _context.py  _logging.py  _oauth2.py  _state.py  config.py  config_file.py  decision.py  exceptions.py  gateway_settings.py
aidefense/runtime/agentsec/inspectors/: __init__.py  api_llm.py  api_mcp.py  gateway_llm.py  gateway_mcp.py
aidefense/runtime/agentsec/patchers/: _base.py  _google_common.py  bedrock.py  cohere.py  google_genai.py  litellm.py  mcp.py  mistral.py  openai.py  vertexai.py
aidefense/tests/: test_chat_inspect.py  test_mcpscan_routes.py
aidefense/tests/agentsec/unit/: test_agentcore.py  test_azure_openai.py  test_base_patcher.py  test_bedrock_patcher.py  test_bedrock_patcher_extended.py  test_cohere_patcher.py  test_cohere_patcher_extended.py  test_config.py  test_config_file.py  test_config_validation.py  test_decision.py  test_exceptions.py  test_gateway_settings.py  test_google_genai_patcher.py  test_google_genai_patcher_extended.py  (+20 more)
docs/source/: examples.rst
examples/: README.md
examples/agentsec/: .env.example  CONFIGURATION.md  README.md  agentsec.yaml
examples/agentsec/1-simple/: basic_protection.py  cohere_example.py  custom_rules_example.py  gateway_mode_example.py  mcp_example.py  mistral_example.py  multi_gateway_example.py  openai_example.py  simple_strands_bedrock.py  skip_inspection_example.py  streaming_example.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/: .gitignore  DEPLOYMENT_NOTES.md  README.md  pyproject.toml
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/_shared/: agent_engine_entry.py  agent_factory.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/agent-engine-deploy/agent_engine_entry/: __init__.py  entry.py  requirements.txt
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/agent-engine-deploy/scripts/: cleanup.sh  deploy.sh  invoke.sh
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/cloud-run-deploy/: requirements.txt
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/gke-deploy/: requirements.txt
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/tests/integration/: test-all-modes.sh  test_mcp_protection.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/tests/unit/: test_vertex_agent_example.py
examples/mcpscan/: manage_resource_connections.py  register_mcp_server.py
scripts/: show-resource-names.sh
scripts/health_auditor/: agent.py  app.py  publish_request.py
(+62 files in other folders)
